# sfhasher

./: .gitignore  BUILD.gn  LICENSE.md  Makefile  README.md  SFHasher.sln  SFHasher.vcxproj  SFHasher.vcxproj.filters  build_mingw.sh
src/: framework.h  hash.cc  hash.h  resource.h  resource.rc  sfhasher.cc  sfhasher.h  superfasthash.cc  superfasthash.h  version.h  xxhash32.cc  xxhash32.h
