# Copyright 2025 Alex313031

group("sfhasher") {
  public_deps = [
    ":sfhash",
  ]
}

executable("sfhash") {
  configs -= [ "//build/config/win:console_subsystem" ]
  configs += [
    "//build/config/win:windowed_subsystem",
    ":sfhash_config",
  ]
  sources = [
    "src/sfhasher.cc",
    "src/sfhasher.h",
    "src/framework.h",
    "src/resource.h",
    "src/resource.rc",
    "src/version.h",
  ]
  public_deps = [
    ":libhash"
  ]
}

config("sfhash_config") {
  include_dirs = [
    "src",
  ]
}

static_library("libhash") {
  configs += [ ":sfhash_config", ]
  sources = [
    "src/hash.cc",
    "src/hash.h",
    "src/superfasthash.cc",
    "src/superfasthash.h",
    "src/xxhash32.cc",
    "src/xxhash32.h",
    "src/framework.h",
    "src/version.h",
  ]
}
